fix html output

--- a/janitor/janitor_in_rmd.html
+++ b/janitor/janitor_in_rmd.html
@@ -393,13 +393,13 @@ mtcars %&gt;%
          #can only be one or the other, row or col, last one in chain will output
   adorn_pct_formatting(digits = 1) %&gt;% 
   adorn_ns() %&gt;% # if NA is set, will add them to output
-  adorn_title(&quot;top&quot;, row_name = &quot;Gears&quot;, col_name = &quot;Cylindars&quot;) %&gt;% # adds field titles if output
+  adorn_title(&quot;top&quot;, row_name = &quot;Gears&quot;, col_name = &quot;Cylinders&quot;) %&gt;% # adds field titles if output
   kable()</code></pre>
 <table>
 <thead>
 <tr class="header">
 <th></th>
-<th align="left">Cylindars</th>
+<th align="left">Cylinders</th>
 <th></th>
 <th></th>
 <th></th>
